tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_param_type_pure.objc3
module MisplacedQualifierAfterParamTypePure;

fn add(lhs: i32 pure, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}
